--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,84 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 .main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
+  background-color: #0C0D11;
+  min-height: 100vh;
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+  color: #fff;
+  background-image: url("../public/bg.png");
+  background-size: cover;
+  background-position: center;
+}
+
+nav.navigation {
+  padding: 50px;
+  max-width: 1440px;
+  margin: auto;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+nav.navigation .logo {
+  display: inline-block;
+  vertical-align: middle;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+nav.navigation .navigationList {
+  flex-grow: 4;
+  text-align: right;
+  font-family: "Spartan", sans-serif;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+nav.navigation .navigationList li {
+  list-style: none;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 80px;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+nav.navigation .navigationList li:first-child {
+  margin: 0px !important;
 }
 
-.title,
-.description {
-  text-align: center;
+.teaser {
+  margin: 50px auto;
+  font-family: "Spartan", sans-serif;
+  padding: 50px;
+  max-width: 1440px;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+.teaser .top {
+  font-size: 24px;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  margin-bottom: 30px;
+  color: #aaa;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.teaser .headline {
+  font-size: 60px;
+  margin-bottom: 50px;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+.teaser .description {
+  font-size: 20px;
+  font-weight: 300;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+.teaser .button {
+  font-family: "Spartan", sans-serif;
+  background-color: #100E22;
+  padding: 20px 40px;
+  color: #fff;
+  border: 1px solid #41197A;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  margin-top: 50px;
+  font-size: 16px;
+  font-weight: 300;
+  transition: all .3s ease;
+  cursor: pointer;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.teaser .button:hover {
+  background-color: #1D1661;
 }
