--- a/styles/CardSlider.module.css
+++ b/styles/CardSlider.module.css
@@ -1,7 +1,7 @@
 
 .cardsContainer {
     overflow: hidden;
-    margin-top: 200px;
+    margin-top: 100px;
     margin-bottom: 100px;
 }
 
@@ -15,4 +15,29 @@
     text-align: center;
     font-family: "Spartan", sans-serif;
     margin-bottom: 75px;
+    padding: 50px;
+}
+
+@media screen and (max-width: 1028px) {
+    .cardsContainer {
+        margin-top: 150px;
+    }
+
+    .cardsTitle {
+        font-size: 40px;
+        margin-bottom: 50px;
+        padding: 25px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .cardsContainer {
+        margin-top: 50px;
+    }
+
+    .cardsTitle {
+        font-size: 30px;
+        margin-bottom: 15px;
+        padding: 25px;
+    }
 }
