--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -119,3 +119,14 @@
         transform: rotate(360deg);
     }
 }
+
+
+@media screen and (max-width: 480px) {
+    .input {
+        font-size: 14px;
+    }
+
+    .searchInput {
+        padding: 13px;
+    }
+}
