small responsive fixes

--- a/styles/Details.module.css
+++ b/styles/Details.module.css
@@ -180,7 +180,7 @@
         padding: 10px;
     }
     .detailsInner {
-        padding: 25px;
+        padding: 50px 25px 25px 25px;
     }
 
     .detailsIcon {
