--- a/styles/InfoBubble.module.css
+++ b/styles/InfoBubble.module.css
@@ -26,7 +26,7 @@
     color: #838383;
     padding: 1rem;
     text-align: left;
-    border-radius: 0.3rem;
+    border-radius: 15px;
     filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.2));
     transform: translate(calc(-50% + 7px), calc(-100% - 7px));
     font-size: 10px;
