added risk indication

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -50,6 +50,10 @@
     background-repeat: no-repeat;
 }
 
+.riskContainer {
+    margin-top: 50px;
+}
+
 .title {
     font-size: 24px;
     color: #fff;
