--- a/styles/Metric.module.css
+++ b/styles/Metric.module.css
@@ -59,6 +59,8 @@
     font-size: 12px;
     color: #666;
     padding-top: 20px;
+    overflow: hidden;
+    word-break: break-word;
 }
 
 .accordion .accordionDescription a {
