fixed low risk risk badge

--- a/styles/RiskIndicator.module.css
+++ b/styles/RiskIndicator.module.css
@@ -8,8 +8,8 @@
 }
 
 .lowRisk {
-    background-color: rgba(68, 235, 68, 0.1);
-    color: #44EB44;
+    background-color: rgba(28, 133, 28, 0.1);
+    color: #1C851C;
 }
 
 .mediumRisk {
