--- a/styles/InfoBubble.module.css
+++ b/styles/InfoBubble.module.css
@@ -3,7 +3,14 @@
     position: relative;
 }
 
-.infoWrapper:hover .bubble {
+.infoWrapper .bubbleContainer {
+    display: none;
+    position: absolute;
+    transform: translate(calc(-50% + 7px), calc(-100%));
+}
+
+
+.infoWrapper:hover .bubbleContainer {
     display: block;
 }
 
@@ -21,15 +28,13 @@
 .bubble {
     width: 18rem;
     background: #fff;
-    position: absolute;
-    display: none;
     color: #838383;
     padding: 1rem;
     text-align: left;
     border-radius: 15px;
     filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.2));
-    transform: translate(calc(-50% + 7px), calc(-100% - 7px));
     font-size: 10px;
+    margin-bottom: 0.5rem;
 }
 
 .bubble::after {
