--- a/styles/TextTeaser.module.css
+++ b/styles/TextTeaser.module.css
@@ -5,6 +5,10 @@
     padding: 100px 50px;
     max-width: 1028px;
     margin: 0 auto;
+    background-image: url("../public/bg2.png");
+    background-size: contain;
+    background-position: center left;
+    background-repeat: no-repeat;
 }
 
 .headline {
