--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,16 +1,21 @@
 .footer {
-    display: flex;
     color: #666;
     font-family: "Spartan", sans-serif;
     font-size: 12px;
     padding: 60px 50px;
-    max-width: 1440px;
-    justify-content: space-between;
-    align-items: center;
     background-color: #0E0D1C;
     margin-top: 300px;
     border-top: 1px solid #1b2352;
     box-shadow: 0px 0px 40px rgba(46, 41, 92, 0.6);
+}
+
+.inner {
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
 }
 
 .legals {
@@ -33,7 +38,7 @@
 }
 
 @media screen and (max-width: 800px) {
-    .footer {
+    .inner {
         flex-direction: column;
         justify-content: center;
         text-align: center;
