--- a/styles/Explore.module.css
+++ b/styles/Explore.module.css
@@ -5,3 +5,10 @@
     max-width: 1440px;
     cursor: pointer;
 }
+
+
+@media screen and (max-width: 600px) {
+    .explore {
+        padding: 0 15px;
+    }
+}
