--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -48,3 +48,10 @@
         justify-content: center;
     }
 }
+
+
+@media screen and (max-width: 860px) {
+    .footer {
+        margin-top: 50px;
+    }
+}
