fixed mobile navigation

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -6,6 +6,7 @@ nav.navigation {
     flex-direction: row;
     align-items: center;
     color: #fff;
+    overflow-x: hidden;
 }
 
 nav.navigation .logo {
