--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,12 +1,10 @@
 .footer {
-    color: #666;
+    color: rgb(189, 189, 189);
     font-family: "Spartan", sans-serif;
     font-size: 12px;
     padding: 60px 50px;
-    background-color: #0E0D1C;
     margin-top: 300px;
-    border-top: 1px solid #1b2352;
-    box-shadow: 0px 0px 40px rgba(46, 41, 92, 0.6);
+    background: linear-gradient(155deg, rgba(34,24,70, 0.5) 0%, rgba(46,23,19, 0.7) 53%, rgba(12,13,17) 100%);
 }
 
 .inner {
