--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -75,7 +75,7 @@ nav.navigation .navigationList li:first-child {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background: linear-gradient(155deg, rgba(34,24,70) 0%, rgba(46,23,19) 53%, rgba(12,13,17) 100%);
         transform: translateX(100%);
         padding: 200px 50px 0 50px;
